2001-12-30  Paolo Bonzini  <bonzini@gnu.org>

	* automake.texi (Install): Remove mention of nonexistent
	uninstall-hook.

2001-12-30  Alan Modra  <amodra@bigpond.net.au>

	* automake.in (generate_makefile): Unlink output file before
	opening so that any hard links are not changed.

2001-12-30  Tom Tromey  <tromey@redhat.com>

	* tests/pr220.test: Use `required' to pick up gcc.

	For PR automake/243:
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Strip everything
	after `:'.
	* tests/Makefile.am (TESTS): Added pr243.test.
	* tests/pr243.test: New file.

	For PR automake/220:
	* tests/Makefile.am (TESTS): Added pr220.test.
	* tests/pr220.test: New file.
	* m4/cond.m4 (AM_CONDITIONAL): Cause creation of config.status to
	fail if conditional was never run.

	For PR automake/260:
	* lib/depcomp (tru64): Correctly handle libtool case.
	From doreille@smr.ch.

2001-12-30  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/distdir.am (distcleancheck_listfiles): Unquote.
	Reported by Yann Droneaud.

2001-12-29  Tom Tromey  <tromey@redhat.com>

	For PR automake/266:
	* tests/Makefile.am (TESTS): Added pr266.test.
	* tests/pr266.test: New file.
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Handle
	non-standard name for makefile.

	For PR automake/279:
	* automake.in (conditional_ambiguous_p): New sub.
	(handle_lib_objects_cond): Use it.
	(check_ambiguous_conditional): Use it.
	* tests/Makefile.am (TESTS): Added pr279.test, pr279-2.test.
	* tests/pr279.test: New file.
	* tests/pr279-2.test: New file.

2001-12-26  Tom Tromey  <tromey@redhat.com>

	For PR automake/249:
	* tests/Makefile.am (TESTS): Added nodist2.test.
	* tests/nodist2.test: New file

2001-12-26  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* m4/multi.m4: Fix quoting in AC_OUTPUT_COMMANDS.

2001-12-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Test for Autoconf >= 2.52.
	* tests/defs (needs_autoconf, has_autoconf): Delete definition.
	* tests/ansi3.test, tests/ansi5.test, tests/ccnoco.test,