@@ -19,7 +19,7 @@
 ?GENERIC?%EXT%%DERIVED-EXT%:
 ?!GENERIC?%OBJ%: %SOURCE%
 if %?MORE-THAN-ONE%
-	$(SHELL) $(YLWRAP) %SOURCE% y.tab.c %OBJ% y.tab.h %BASE%.h -- %COMPILE%
+	$(SHELL) $(YLWRAP) %SOURCE% y.tab.c %OBJ% y.tab.h %BASE%.h y.output %BASE%.output -- %COMPILE%
 else !%?MORE-THAN-ONE%
 	%COMPILE% %SOURCE%
 ## Edit out `#line' or `#' directives.
@@ -32,12 +32,16 @@ else !%?MORE-THAN-ONE%
 	  to=`echo "%BASE%_H" | sed \
                 -e 'y/abcdefghijklmnopqrstuvwxyz/ABCDEFGHIJKLMNOPQRSTUVWXYZ/' \
                 -e 's/[^ABCDEFGHIJKLMNOPQRSTUVWXYZ]/_/g'`; \
-	    sed "/^#/ s/Y_TAB_H/$$to/g" y.tab.h >%BASE%.ht; \
+	  sed "/^#/ s/Y_TAB_H/$$to/g" y.tab.h >%BASE%.ht; \
+	  rm y.tab.h; \
 	  if cmp -s %BASE%.ht %BASE%.h; then \
 	    rm -f %BASE%.ht ;\
 	  else \
 	    mv %BASE%.ht %BASE%.h; \
 	  fi; \
+	fi
+	if test -f y.output; then \
+	  mv y.output %BASE%.output; \
 	fi
 endif !%?MORE-THAN-ONE%
 
