@@ -1,3 +1,8 @@
+2001-12-30  Akim Demaille  <akim@epita.fr>
+
+	* lib/am/yacc.am: Also rename the possible y.output file.
+	Remove the trailing y.tab.h.
+
 2001-12-30  Paolo Bonzini  <bonzini@gnu.org>
 
 	* automake.texi (Install): Remove mention of nonexistent
